--- a/src/components/contact-info/contact-info.njk
+++ b/src/components/contact-info/contact-info.njk
@@ -5,7 +5,7 @@
     <address class="contact-info">
         <p class="contact-info__time">Мы на связи<br> с <time datetime="09:00">09:00</time> до <time datetime="21:00">21:00</time> мск</p>
         <div class="contact-info__socials">
-            {{ SocialNetworks(modifier = 'is-colorful') }}
+            {{ SocialNetworks() }}
         </div>
         <ul class="contact-info__list">
             <li class="contact-info__item">
