--- a/src/components/heading/_heading.scss
+++ b/src/components/heading/_heading.scss
@@ -17,14 +17,14 @@
 }
 
 .heading {
-    padding: 68px 0 0;
-
-    @include breakpoint(medium down) {
-        padding-top: 30px;
-    }
+    flex-grow: 1;
 
     &__container {
         @extend %container-fluid;
+    }
+
+    &__inner {
+        padding: 30px 0 0;
     }
 
     &__text {
@@ -32,12 +32,12 @@
     }
 
     &__title {
-        @include font($typo-1, 4.2rem, $bold);
+        @include font($typo-1, 5rem, $bold);
         color: $color-3--5;
         line-height: 1.25;
 
         @include breakpoint(small down) {
-            font-size: 3.2rem;
+            font-size: 4rem;
         }
     }
 
