--- a/src/components/logo/_logo.scss
+++ b/src/components/logo/_logo.scss
@@ -1,21 +1,31 @@
 .logo {
-    display: inline-block;
+    align-items: center;
+    display: flex;
+    max-width: 240px;
+    text-decoration: none;
+
+    @include breakpoint(small down) {
+        max-width: 200px;
+    }
 
     &__image {
         align-content: center;
         align-items: center;
         display: flex;
+        flex-shrink: 0;
+        height: 65px;
+        margin-right: 15px;
 
         img {
             max-height: 100%;
         }
+    }
 
-        .header & {
-            height: 37px;
+    &__text {
+        @include font($typo-1, 1.4rem, $bold);
 
-            @include breakpoint(medium down) {
-                @include size(100px, 30px);
-            }
+        @include breakpoint(small down) {
+            font-size: 1.2rem;
         }
     }
 }
