--- a/src/components/navbar/_navbar.scss
+++ b/src/components/navbar/_navbar.scss
@@ -1,15 +1,19 @@
 .navbar {
     min-height: 10px;
 
-    @include breakpoint(medium down) {
-        padding-top: 30px;
-    }
-
     &__container {
         @extend %container;
 
-        @include breakpoint(medium down) {
-            max-width: 1000px;
+        .is-detail & {
+            @extend %container-sm;
+        }
+    }
+
+    &__wrapper {
+        padding: 40px 0;
+
+        @include breakpoint(small down) {
+            padding: 20px 0;
         }
     }
 
@@ -17,13 +21,5 @@
         align-items: center;
         display: flex;
         justify-content: flex-start;
-    }
-
-    &__item {
-        &.is-absolute {
-            @include breakpoint(large only) {
-                @include absolute(80px, null, null, null);
-            }
-        }
     }
 }
