--- a/src/components/subscribe/subscribe.njk
+++ b/src/components/subscribe/subscribe.njk
@@ -16,7 +16,7 @@
                 <h2 class="subscribe__title">{{ title | safe }}</h2>
                 <p class="subscribe__teaser">{{ teaser }}</p>
                 <div class="subscribe__links">
-                    {{ SocialNetworks(modifier = 'has-shadow') }}
+                    {{ SocialNetworks() }}
                 </div>
             </div>
             <div class="subscribe__image-wrapper">
