--- a/src/views/pages/detail-page.njk
+++ b/src/views/pages/detail-page.njk
@@ -1,10 +1,11 @@
 {%- from 'components/heading/heading.njk' import Heading -%}
 {%- from 'views/core-components/ce-gallery.njk' import Gallery -%}
-{%- from 'components/blog/blog.njk' import BlogHome -%}
-{%- from 'components/subscribe/subscribe.njk' import Subscribe -%}
+{%- from 'components/accordion/accordion.njk' import AccordionItem -%}
+{%- from 'components/downloads/downloads.njk' import DownloadsSection -%}
+{%- from 'components/persons/persons.njk' import PersonsSection -%}
 
 {% set bodyClass = 'is-detail' %}
-{% set title = 'Экскурсия в Выборг из Санкт-Петербург с посещением замка и парка Монрепо' %}
+{% set title = 'Заголовок страницы' %}
 
 {% extends 'views/layouts/base.njk' %}
 
@@ -16,9 +17,45 @@
 
 {%- block content -%}
     <div class="rte">
-        <p>Город Выборг находится на северо-востоке побережья Финского залива. Он был основан в 1293г. Историки до сих
-            пор не пришли к единому мнению какое слово стало ключом к названию города. Одни говорят про славянское
-            слово «Выбор», другие про старонорвежский язык.</p>
+        <h2>Заголовок H2</h2>
+        <h3>Заголовок H3</h3>
+        <h4>Заголовок H4</h4>
+        <h5>Заголовок H5</h5>
+        <p>Основной текст статьи. Основной текст <a href="#">статьи</a>. Основной текст статьи. Основной текст статьи. Основной текст статьи. Основной текст статьи. Основной текст статьи. Основной текст статьи. Основной текст статьи.</p>
+
+        <ul>
+            <li>{{ lorem(1) }}</li>
+            <li>{{ lorem(1) }}</li>
+            <li>
+                <p>{{ lorem(1) }}</p>
+                <ul>
+                    <li>{{ lorem(1) }}</li>
+                    <li>{{ lorem(1) }}</li>
+                    <li>{{ lorem(1) }}</li>
+                </ul>
+            </li>
+            <li>{{ lorem(1) }}</li>
+        </ul>
+
+        <ol>
+            <li>{{ lorem(1) }}</li>
+            <li>{{ lorem(1) }}</li>
+            <li>
+                <p>{{ lorem(1) }}</p>
+                <ol>
+                    <li>{{ lorem(1) }}</li>
+                    <li>{{ lorem(1) }}</li>
+                    <li>{{ lorem(1) }}</li>
+                </ol>
+            </li>
+        </ol>
+
+        <blockquote>
+            <p>{{ lorem(1) }}</p>
+        </blockquote>
+
+        <p class="highlight">{{ lorem(1) }}</p>
+
         {{ Gallery() }}
         {{ Gallery(
             images = [
@@ -34,36 +71,12 @@
                 }
             ]
         ) }}
-        <p>Как бы то ни было в 1293г. Торгильс Кнутссон на Замковом острове велел построить надежную крепость, замок.
-            Вот так и появился Выборг. Все это происходило во время одного из крестовых походов.</p>
-        <h2>Что посетим и увидим</h2>
-        <p>Выборг был в составе Швеции, Финляндии, СССР и России. Все это отразилось на его культуре, архитектуре,
-            исторических артефактах, музеях. Добавьте сюда еще знаменитый парк Монрепо, и вы получите одно место
-            культурного и познавательного отдыха. Мы подготовили для вас программу экскурсии, которая за 1 день даст вам
-            возможность прикоснуться к величию Выборга.</p>
-        <p>09:30 – Начало экскурсии в Выборг. Отправление из Санкт-Петербурга от Московского вокзала
-            Выборг. Экскурсия по Старому Городу. В Старом Городе вы увидите памятники архитектуры, которые
-            сформировались за семь столетий и четырех национальных культур. Дом Горожанина, Костел Гиацинта, Дом купца
-            Векрута и многое другое вы увидите в Старом Городе. Озвучена малая часть. Посещение лавки вкусностей
-            «Wiborg» Лимонады, сувениры и знаменитый Выборгский крендель. Захватите парочку на память, от них невозможно
-            оторваться.</p>
-        <p>Посещение Выборгского замка (*Замок закрыт на реконструкцию до 2023 года, на экскурсии вы посетите другие
-            места: Башня и площадь Ратуши, Дом горожанина!)</p>
-        <p>Крепость посреди города, которая считается сердцем Выборга. Единственный в России памятник
-            западноевропейского зодчества. Он сохранился до наших дней. Только представьте сколько времени прошло, если
-            он относится к XIII веку.</p>
-        <p>Посещение ландшафтного парка «Монрепо»
-            Переводится как "Мое вдохновение", " Мой Покой". Знаменитый скальный музей-заповедник, который находится под
-            охраной ЮНЕСКО.</p>
-        <p>Прибытие в Санкт-Петербург. Окончание экскурсии в Выборг у Московского вокзала.
-            Приобретайте на нашем сайте билеты и увидимся на экскрусии! Маршрут и длительность экскурсии могут зависеть
-            от дорожной ситуации, а также от авторской подачи гида. Например, в случае пробок на дороге, перекрытия
-            проезжей части и при других форс-мажорных обстоятельствах. Пожалуйста, учитывайте это при планировании ваших
-            поездок, так как в этих случаях продолжительность экскурсии может значительно увеличиться.</p>
     </div>
+    <section class="section accordion-section">
+        {{ AccordionItem() }}
+        {{ AccordionItem() }}
+        {{ AccordionItem() }}
+    </section>
+    {{ DownloadsSection() }}
+    {{ PersonsSection() }}
 {% endblock %}
-
-{%- block contentBottom -%}
-    {{ BlogHome(title = 'Похожие статьи') }}
-    {{ Subscribe() }}
-{%- endblock -%}
