--- a/src/views/pages/list-blog.njk
+++ b/src/views/pages/list-blog.njk
@@ -1,41 +1,35 @@
 {%- from 'components/heading/heading.njk' import Heading -%}
 {%- import 'views/core-components/filter.njk' as Filter -%}
-{%- import 'views/core-components/form.njk' as Form -%}
+{#{%- import 'views/core-components/form.njk' as Form -%}#}
 {%- from 'components/page-list/page-list.njk' import PageList -%}
 {%- from 'components/blog/blog.njk' import BlogList -%}
-{%- from 'components/subscribe/subscribe.njk' import Subscribe -%}
 
-{% set title = 'Блог' %}
+{% set title = 'Новости' %}
 
 {% extends 'views/layouts/base.njk' %}
 
 {%- block heading -%}
     {{ Heading(
-        title = title,
-        teaser = 'платформа простого и надежного онлайн бронирования экскурсий на русском языке по всему миру. Был основан в 2012 году в Санкт-Петербурге.'
+        title = title
     ) }}
 {%- endblock -%}
 
-{% block filterBlock %}
-    {% call Filter.FilterWrapper(legend = 'Сортировать записи блога по:', ariaLabelText = 'Сортировать записи блога') %}
-        {% call Filter.FieldsWrapper() %}
-            {% call Filter.FieldsGroup() %}
-                {% call Filter.FilterField('col-md-12') %}
-                    {{ Form.FormField(type = 'select', label = 'Сортировать', wrapperModifier = 'is-inline') }}
-                {% endcall %}
-            {% endcall %}
-        {% endcall %}
-    {% endcall %}
-{% endblock %}
+{#{% block filterBlock %}#}
+{#    {% call Filter.FilterWrapper(legend = 'Сортировать записи блога по:', ariaLabelText = 'Сортировать записи блога') %}#}
+{#        {% call Filter.FieldsWrapper() %}#}
+{#            {% call Filter.FieldsGroup() %}#}
+{#                {% call Filter.FilterField('col-md-12') %}#}
+{#                    {{ Form.FormField(type = 'select', label = 'Сортировать', wrapperModifier = 'is-inline') }}#}
+{#                {% endcall %}#}
+{#            {% endcall %}#}
+{#        {% endcall %}#}
+{#    {% endcall %}#}
+{#{% endblock %}#}
 
 {%- block content -%}
     {{ PageList(
-        itemsCount = 12,
-        list = BlogList(count = 12),
+        itemsCount = 6,
+        list = BlogList(count = 6),
         pagerType = 'default'
     ) }}
 {% endblock %}
-
-{%- block contentBottom -%}
-    {{ Subscribe() }}
-{%- endblock -%}
