--- a/src/components/cover/_cover-item.scss
+++ b/src/components/cover/_cover-item.scss
@@ -1,11 +1,11 @@
 .cover-item {
+    border-radius: $border-radius;
+    overflow: hidden;
     position: relative;
 
     &__media {
         background-color: $color-black;
-        border-radius: 20px;
         height: 639px;
-        overflow: hidden;
         position: relative;
 
         @include breakpoint(small down) {
@@ -24,95 +24,40 @@
     }
 
     &__content {
-        @include absolute(0, 0, null, 0);
+        @include absolute(null, 0, 0, 0);
+        background-image: linear-gradient(to top, $color-black, transparent);
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        padding-top: 122px;
-
-        @include breakpoint(small down) {
-            padding-top: 45px;
-        }
+        padding: 30px 0;
     }
 
     &__container {
         @extend %container;
-        max-width: 820px;
+        padding: 0 90px;
 
         @include breakpoint(small down) {
-            padding: 0 23px;
+            padding: 0 20px;
         }
     }
 
     &__text {
         @extend %link-block-context;
         @include size(100%, auto);
-        text-align: center;
+        max-width: 770px;
     }
 
     &__title {
-        @include font($typo-1, 4.2rem, $black);
-        color: $color-3--5;
-        line-height: 1.2;
-        padding-bottom: 41px;
-        position: relative;
+        @include font($typo-1, 2.6rem, $bold);
+        color: $color-white;
+        line-height: 1.55;
 
         @include breakpoint(small down) {
             font-size: 2.2rem;
-            line-height: 1.45;
-            padding-bottom: 30px;
-        }
-
-        &::after {
-            @include absolute(null, null, 0, 50%);
-            @include size(228px, 41px);
-            background: {
-                image: url('../images/decor/title-decor.png');
-                position: center;
-                repeat: no-repeat;
-                size: cover;
-            }
-            content: '';
-            transform: translateX(-50%);
-
-            @include breakpoint(small down) {
-                @include size(138px, 25px);
-            }
         }
     }
 
     &__title-link {
         @extend %link-block;
-    }
-
-    &__teaser {
-        @include font($typo-1, 1.6rem, $normal);
-        color: $color-3--5;
-        line-height: 1.25;
-        margin-top: 13px;
-
-        @include breakpoint(small down) {
-            font-size: 1.4rem;
-            line-height: 1.55;
-            margin-top: 5px;
-        }
-    }
-
-    &__search {
-        margin-top: 47px;
-
-        @include breakpoint(small down) {
-            margin-top: 23px;
-        }
-    }
-
-    &__tags {
-        display: flex;
-        justify-content: center;
-        margin-top: 120px;
-
-        @include breakpoint(small down) {
-            margin-top: 79px;
-        }
     }
 }
