--- a/src/components/cover/cover.njk
+++ b/src/components/cover/cover.njk
@@ -57,30 +57,20 @@
         '1280x1083?1279',
         '1440x639'
     ],
-    title = 'Поиск и бронирование экскурсий',
-    teaser = 'Экскурсии и частные гиды в России и за рубежом'
+    title = 'Государственное бюджетное учреждение здравоохранения «Бердянская городская больница»'
 ) -%}
     <div class="cover-item">
         <div class="cover-item__media">
             {{ Image({
                 className: 'cover-item__picture',
                 sizes: imageSizes,
-                serviceID: '368'
+                serviceID: '832'
             }) }}
         </div>
         <div class="cover-item__content appearance-animation from-bottom">
             <div class="cover-item__container">
                 <div class="cover-item__text">
                     <h3 class="cover-item__title">{{ title }}</h3>
-                    <p class="cover-item__teaser">{{ teaser }}</p>
-                </div>
-                <div class="cover-item__search">
-                    <div class="cover-search" role="search">
-                        {{ CoverSearchForm() }}
-                    </div>
-                    <div class="cover-item__tags">
-                        {{ SearchTags() }}
-                    </div>
                 </div>
             </div>
         </div>
