--- a/src/components/events/_event-item.scss
+++ b/src/components/events/_event-item.scss
@@ -12,7 +12,7 @@
     position: relative;
 
     &__image {
-        border-radius: 30px;
+        border-radius: $border-radius;
         display: flex;
         overflow: hidden;
 
