--- a/src/components/footer/_footer-nav.scss
+++ b/src/components/footer/_footer-nav.scss
@@ -1,15 +1,15 @@
 .footer-nav {
-    max-width: 284px;
-    padding: 0 10px;
+    margin-bottom: 40px;
+    padding: 0 20px;
+    width: 50%;
 
     @include breakpoint(small down) {
-        max-width: initial;
-        padding: 15px 0;
+        width: 100%;
     }
 
     &__title {
         @include font(null, 1.6rem, $semibold);
-        color: $color-3--5;
+        color: $color-black;
         margin-bottom: 20px;
     }
 
@@ -20,7 +20,7 @@
 
     &__list-link {
         @include font(null, 1.4rem, $normal);
-        color: $color-3--5;
+        color: $color-black;
         text-decoration: none;
 
         @include on-event() {
