--- a/src/components/footer/_footer.scss
+++ b/src/components/footer/_footer.scss
@@ -1,39 +1,27 @@
 // Footer styles
-
 .footer {
-    background-color: $color-3--6;
-    position: relative;
-
-    @include breakpoint(medium down) {
-        background-color: $color-white;
-    }
-
-    &::before {
-        @include absolute(0, null, null, 0);
-        @include size(100%, 50px);
-        background-color: $color-white;
-        border-radius: 0 0 50px 50px;
-        content: '';
-        pointer-events: none;
-        z-index: 2;
-
-        @include breakpoint(medium down) {
-            content: none;
-        }
-    }
+    background-color: $color-3--1;
 
     &__container {
         @extend %container;
+
+        @include breakpoint(medium down) {
+            max-width: 768px;
+        }
+
+        @include breakpoint(small down) {
+            max-width: 380px;
+        }
     }
 
     &__row {
         display: flex;
         flex-wrap: wrap;
-        padding: 133px 0 83px;
+        padding: 80px 0;
 
         @include breakpoint(medium down) {
             flex-direction: column;
-            padding: 33px 0;
+            padding: 40px 0 0;
         }
     }
 
@@ -48,28 +36,19 @@
             }
         }
 
-        &.is-middle {
-            display: flex;
-            justify-content: space-between;
-            width: 53%;
-
-            @include breakpoint(medium down) {
-                display: none;
-                flex-direction: column;
-                margin: 0 -15px;
-                width: 100%;
-            }
-        }
-
         &.is-last {
-            padding-left: 70px;
-            width: 25.5%;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            width: 65%;
 
             @include breakpoint(medium down) {
-                border-top: 1px solid $color-3--7;
-                margin: 25px 0 0;
-                padding: 25px 0 0;
-                width: 100%;
+                margin: 40px -20px 0;
+                width: auto;
+            }
+
+            @include breakpoint(small down) {
+                flex-direction: column;
             }
         }
     }
@@ -77,8 +56,8 @@
     &__bottom {
         @include font(null, 1.3rem, $normal);
         align-items: center;
-        border-top: 1px solid $color-3--7;
-        color: $color-3--5;
+        border-top: 1px solid $color-3--3;
+        color: $color-black;
         display: flex;
         justify-content: space-between;
         padding: 25px 0;
@@ -89,20 +68,17 @@
     }
 
     &__author {
-        align-items: center;
-        display: flex;
+        @include font(null, 1.3rem, $normal);
         flex-shrink: 0;
 
         @include breakpoint(small down) {
             margin-top: 13px;
         }
 
-        img {
-            @include size(132px, auto);
+        a {
+            @include on-event() {
+                text-decoration: none;
+            }
         }
-    }
-
-    &__author-link {
-        margin-left: 15px;
     }
 }
