--- a/src/components/header/_header-dropdown.scss
+++ b/src/components/header/_header-dropdown.scss
@@ -13,7 +13,7 @@
             &::before {
                 @include absolute(0, null, null, 50%);
                 @include size(calc(100% - 56px), 1px);
-                background-color: $color-3--14;
+                background-color: $color-3--3;
                 content: '';
                 transform: translateX(-50%);
             }
@@ -30,6 +30,7 @@
 
         @include on-event {
             background-color: $color-1--1;
+            color: $color-white;
         }
     }
 }
