--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -2,11 +2,11 @@
     $this: &;
 
     display: block;
-    padding: 0 0 114px;
+    padding: 0 0 100px;
     width: 100%;
 
     @include breakpoint(medium down) {
-        padding-bottom: 83px;
+        padding-bottom: 80px;
     }
 
     &__container {
@@ -33,6 +33,10 @@
 
     &__container {
         @extend %container;
+
+        @include breakpoint(medium down) {
+            padding-right: 5px;
+        }
     }
 
     &__inner {
@@ -46,11 +50,10 @@
         display: flex;
         flex-grow: 1;
         flex-shrink: 0;
-        height: 114px;
+        height: 100px;
 
         @include breakpoint(medium down) {
-            height: 83px;
-            padding-left: 35px;
+            height: 80px;
         }
     }
 
@@ -82,10 +85,9 @@
 
     &__link {
         @include font(null, 1.5rem, $semibold);
-        @include trs();
         align-items: center;
-        background-color: $color-3--10;
         border-radius: 25px;
+        color: $color-black;
         display: flex;
         justify-content: center;
         margin-left: 20px;
@@ -94,48 +96,25 @@
         text-decoration: none;
 
         @include breakpoint(medium down) {
-            font-size: 1.2rem;
-            margin-left: 8px;
-            min-height: 37px;
-            padding: 5px 10.5px;
+            margin-left: 0;
         }
 
         @include fa-icon-style(false) {
-            color: $color-3--13;
+            @include trs();
             font-size: 2.2rem;
-
-            @include breakpoint(medium down) {
-                font-size: 1.6rem;
-            }
         }
 
         @include on-event() {
-            background-color: $color-3--5;
-            color: $color-white;
-
             @include fa-icon-style(false) {
-                color: $color-white;
-            }
-        }
-
-        &.is-search {
-            @include breakpoint(medium down) {
-                display: none;
-            }
-        }
-
-        &.is-login {
-            min-width: 114px;
-
-            @include breakpoint(medium down) {
-                min-width: 85px;
+                color: $color-1--1;
+                transform: scale(1.2);
             }
         }
     }
 
     &__nav-toggle {
-        @include absolute(50%, null, null, 0);
-        transform: translateY(-50%);
+        align-items: center;
+        display: flex;
 
         &.is-lg-hide {
             @include breakpoint(large) {
