--- a/src/components/navbar/navbar.njk
+++ b/src/components/navbar/navbar.njk
@@ -1,4 +1,4 @@
-{%- from 'components/back-link/back-link.njk' import BackLink -%}
+{% from 'components/breadcrumbs/breadcrumbs.njk' import Breadcrumbs %}
 
 {#
     Navbar tempalte.
@@ -6,13 +6,9 @@
 {% macro Navbar() %}
     <div class="navbar">
         <div class="navbar__container">
-            <nav class="navbar__nav" role="navigation" aria-label="Вернуться к списку записей">
-                <ul class="navbar__list">
-                    <li class="navbar__item is-absolute appearance-animation from-left">
-                        {{ BackLink() }}
-                    </li>
-                </ul>
-            </nav>
+            <div class="navbar__wrapper">
+                {{ Breadcrumbs() }}
+            </div>
         </div>
     </div>
 {% endmacro %}
