--- a/src/components/page-list/page-list.njk
+++ b/src/components/page-list/page-list.njk
@@ -21,6 +21,6 @@
             <span class="js-ajax-info-total">37</span> всего
         </p>
         {{ (list.val or list) | safe }}
-        {{ Pager(type = pagerType) }}
+        {{ Pager(type = pagerType) if pagerType }}
     </div>
 {%- endmacro -%}
