--- a/src/components/subscribe/_subscribe.scss
+++ b/src/components/subscribe/_subscribe.scss
@@ -17,7 +17,7 @@
 
     &__image {
         @include size(100%);
-        border-radius: 30px;
+        border-radius: $border-radius;
         display: block;
         height: 527px;
         overflow: hidden;
