--- a/src/scss/core-components/_pager.scss
+++ b/src/scss/core-components/_pager.scss
@@ -11,16 +11,9 @@
 
     & &__list {
         @include font($typo-1, 1.3rem, $medium);
-        background-color: $color-3--10;
-        border-radius: 25px;
         display: flex;
         list-style: none;
         margin: 30px auto 10px;
-        padding: 9px 22px;
-
-        @include breakpoint(small down) {
-            padding: 9px;
-        }
     }
 
     &__item {
@@ -29,28 +22,34 @@
         margin: 0 2.5px;
 
         #{$this}__link {
-            @include font($typo-1, 1.3rem, $medium);
-            @include size(32px);
+            @include font($typo-1, 1.4rem, $medium);
+            @include size(40px);
             @include trs();
             align-items: center;
             border: none;
             border-radius: 50%;
-            color: $color-3--17;
+            color: $color-3--5;
             display: flex;
             justify-content: center;
             padding: 0 0.5em;
             text-decoration: none;
+
+            @include breakpoint(small down) {
+                @include size(32px);
+            }
         }
 
         a#{$this}__link {
             &:hover,
             &:focus {
                 background-color: $color-1--1;
+                color: $color-white;
             }
         }
 
         span#{$this}__link {
             background-color: $color-1--1;
+            color: $color-white;
             cursor: auto;
         }
 
@@ -69,7 +68,7 @@
                     @include size(23px);
                     @include trs();
                     align-items: center;
-                    border: 1.5px solid $color-3--17;
+                    border: 1.5px solid $color-3--5;
                     border-radius: 50%;
                     display: flex;
                     font-size: 1.2rem;
@@ -94,7 +93,7 @@
 
     &__separator {
         @include font($typo-1, 1.3rem, $medium);
-        color: $color-3--17;
+        color: $color-3--5;
         padding: 0 0.5em;
     }
 
