--- a/src/scss/utils/_config.scss
+++ b/src/scss/utils/_config.scss
@@ -24,30 +24,14 @@ $breakpointCoverages: 'only', 'down', 'up';
 
 // Site colors.
 // color-1
-$color-1--1: #ffd600 !default;
-$color-1--2: #eebf55 !default;
+$color-1--1: #3f8cfe !default;
 
 // Grey color
-$color-3--1: #e6e6e6 !default;
+$color-3--1: #f6f6f6 !default;
 $color-3--2: #e9e9e9 !default;
 $color-3--3: #dfdfdf !default;
-$color-3--4: #6a6a6a !default;
+$color-3--4: #727272 !default;
 $color-3--5: #252525 !default;
-$color-3--6: #fbfbfb !default;
-$color-3--7: #e2e2e2 !default;
-$color-3--8: #7b7b7b !default;
-$color-3--9: #828282 !default;
-$color-3--10: #f5f5f5 !default;
-$color-3--11: #454545 !default;
-$color-3--12: #d2d2d2 !default;
-$color-3--13: #959595 !default;
-$color-3--14: #ececec !default;
-$color-3--15: #dfdfdf !default;
-$color-3--16: #dedede !default;
-$color-3--17: #1e1e1e !default;
-$color-3--18: #ebebeb !default;
-$color-3--19: #e8e8e8 !default;
-$color-3--20: #f6f6f6 !default;
 
 // Neutral colors
 $color-black: #000;
@@ -55,6 +39,10 @@ $color-white: #fff;
 
 // Site fonts.
 $typo-1: 'Montserrat', sans-serif;
+
+// FontAwesome font name.
+$font-awesome-typo: 'Font Awesome 6 Free';
+$font-awesome-brands-typo: 'Font Awesome 6 Brands';
 
 // font weight
 $thin: 100;
@@ -66,3 +54,6 @@ $semibold: 600;
 $bold: 700;
 $extrabold: 800;
 $black: 900;
+
+// border radius
+$border-radius: 0;
