--- a/src/scss/utils/_mixins.scss
+++ b/src/scss/utils/_mixins.scss
@@ -1,11 +1,11 @@
 %icons-font-aliasing {
     display: inline-block;
-    font-family: var(--font-awesome-typo);
+    font-family: $font-awesome-typo;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     font-style: normal;
     font-variant: normal;
-    font-weight: var(--fw-normal);
+    font-weight: $normal;
     //vertical-align: -0.125em;
 }
 
